@@ -1,3 +1,7 @@
+2003-04-13  Michael Snyder  <msnyder@redhat.com>
+
+	* compile.c (sim_resume): Implement 'daa' and 'das' instructions.
+
 2003-03-20  D.Venkatasubramanian  <dvenkat@noida.hcltech.com>
 
 	* compile.c (cmdline_location): Added function to 
